--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -5,7 +5,7 @@
       <div class="row h-100 align-items-center">
         <div class="col-lg-12">
           <h1 class="display-4 text-white mt-5 mb-2">Chore Tracker</h1>
-          <p class="lead mb-5 text-white-50">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non possimus ab labore provident mollitia. Id assumenda voluptate earum corporis facere quibusdam quisquam iste ipsa cumque unde nisi, totam quas ipsam.</p>
+          <p class="lead mb-5 text-white-50">Create and manage chores for your whole family. Assign rewards to keep everyone motivated, and before you know it arguing about chores will be a thing of the past!</p>
         </div>
       </div>
     </div>
@@ -13,31 +13,13 @@
 
   <div class="row">
     <div class="col-md-8 mb-5">
-      <h2>What We Do</h2>
+      <h2>How it works</h2>
       <hr>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A deserunt neque tempore recusandae animi soluta quasi? Asperiores rem dolore eaque vel, porro, soluta unde debitis aliquam laboriosam. Repellat explicabo, maiores!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis optio neque consectetur consequatur magni in nisi, natus beatae quidem quam odit commodi ducimus totam eum, alias, adipisci nesciunt voluptate. Voluptatum.</p>
-      <a class="btn btn-primary btn-lg" href="#">Call to Action &raquo;</a>
-    </div>
-    <div class="col-md-4 mb-5">
-      <h2>Contact Us</h2>
-      <hr>
-      <address>
-        <strong>Start Bootstrap</strong>
-        <br>3481 Melrose Place
-        <br>Beverly Hills, CA 90210
-        <br>
-      </address>
-      <address>
-        <abbr title="Phone">P:</abbr>
-        (123) 456-7890
-        <br>
-        <abbr title="Email">E:</abbr>
-        <a href="mailto:#">name@example.com</a>
-      </address>
+      <p>Parents start by creating an account for the whole family. Then each family member can have their own profile created with their own login. Parents can then add chores and assign them to one or more members of the family.</p>
+      <p>To keep everyone motivated, parents can add different types of rewards that can be earned by completing chores.</p>
+      <a class="btn btn-primary btn-lg" routerLinkActive="active" routerLink="/register">Register Now &raquo;</a>
     </div>
   </div>
-  <!-- /.row -->
 
   <div class="row">
     <div class="col-md-4 mb-5">
