--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row py-5 mb-5">
-    <div class="col-md-4">
+    <div class="col-md-6">
       <h1>Login</h1>
       <hr><br>
       <form [formGroup]="loginForm" (ngSubmit)="login()">
@@ -14,6 +14,15 @@
         </div>
         <button type="submit" class="btn btn-primary" [disabled]="!loginForm.valid">Submit</button>
       </form>
+    </div>
+    <div class="col-sm-5">
+      <p class="lead">Register now for <span class="text-success">FREE</span></p>
+      <ul class="list-unstyled" style="line-height: 2">
+        <li><span class="text-success"><fa-icon [icon]="faCheck"></fa-icon></span> Set up chores for your family</li>
+        <li><span class="text-success"><fa-icon [icon]="faCheck"></fa-icon></span> Assign Rewards for Completed Chores</li>
+        <li><span class="text-success"><fa-icon [icon]="faCheck"></fa-icon></span> More coming soon...</li>
+      </ul>
+      <a class="btn btn-primary btn-lg" routerLinkActive="active" routerLink="/register">Register Now!</a>
     </div>
   </div>
 </div>
